--- a/src/Netresearch/TimeTrackerBundle/Resources/translations/messages.de.yml
+++ b/src/Netresearch/TimeTrackerBundle/Resources/translations/messages.de.yml
@@ -34,3 +34,4 @@
 "Invalid Ticketsystem Token (Jira) you're going to be forwarded": "Ungültiges Jira-Token. Sie werden weitergeleitet."
 "Dataset was modified in Timetracker anyway": "Der Datensatz wurde dennoch Timetracker geändert."
 "Dataset was deleted in Timetracker anyway": "Der Datensatz wurde dennoch im Timetracker entfernt."
+"The activity name provided already exists.": "Der gewählte Name für eine Tätigkeit existiert bereits!"
