make teams managable via frontend
Conflicts:
	src/Netresearch/TimeTrackerBundle/Controller/AdminController.php

--- a/src/Netresearch/TimeTrackerBundle/Resources/translations/messages.de.yml
+++ b/src/Netresearch/TimeTrackerBundle/Resources/translations/messages.de.yml
@@ -35,3 +35,4 @@
 "Dataset was modified in Timetracker anyway": "Der Datensatz wurde dennoch Timetracker geändert."
 "Dataset was deleted in Timetracker anyway": "Der Datensatz wurde dennoch im Timetracker entfernt."
 "The activity name provided already exists.": "Der gewählte Name für eine Tätigkeit existiert bereits!"
+"The team name provided already exists.": "Der gewählte Name für ein Team existiert bereits!"
