--- a/src/Netresearch/TimeTrackerBundle/Resources/translations/messages.de.yml
+++ b/src/Netresearch/TimeTrackerBundle/Resources/translations/messages.de.yml
@@ -1,5 +1,6 @@
 "Duration must be greater than 0!": "Die Aktivität muss mindestens eine Minute angedauert haben!"
 "You need to login.": "Bitte anmelden."
+"No equivalent timetracker user could be found.": "Es konnte kein entsprechender Timetracker Benutzer gefunden werden."
 "The ticket's prefix '%ticket_jira_id%' does not match the project's JIRA prefix '%project_jira_id%'.": "Das Präfix des Tickets '%ticket_jira_id%' passt nicht zum JIRA-Präfix '%project_jira_id%' des Projektes."
 "Escalation! You spent more time (%spent% h) than expected (%expected% h) on ticket %ticket%!": "Eskalation! Du hast mehr Zeit für das Ticket investiert (nämlich %spent% Stunden) als erwartet (%expected% Stunden)!"
 "You need to specify at least customer, project, user or month and year.": "Du musst mindestens Kunde, Projekt, Mitarbeiter oder Jahr und Monat auswählen."
