makes administrative datasets are deletable via frontend
Requires database update (upgrade-1.0.0.sql)
Resolves MGI-47
Conflicts:
	src/Netresearch/TimeTrackerBundle/Controller/AdminController.php

--- a/src/Netresearch/TimeTrackerBundle/Resources/translations/messages.de.yml
+++ b/src/Netresearch/TimeTrackerBundle/Resources/translations/messages.de.yml
@@ -38,3 +38,5 @@
 "The activity name provided already exists.": "Der gewählte Name für eine Tätigkeit existiert bereits!"
 "The team name provided already exists.": "Der gewählte Name für ein Team existiert bereits!"
 "Please provide a valid user as team leader.": "Bitte gib einen gültigen Benutzer als Teamleiter an!"
+"Dataset could not be removed. %s": "Der Datensatz konnte nicht enfernt werden! %s"
+"Other datasets refer to this one.": "Der Datensatz ist bereits mit anderen verknüpft."
