--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2017-05-05  Tobias Hein  <tobias.hein@netresearch.de>
+
+	* Version: 1.3.0
+
+2017-05-05  Tobias.Hein  <tobias.hein@netresearch.de>
+
+	* TTT-536: make ticket URL maintainable per ticketsystem, add  FRESHDESK as ticketsystem type
+
 2017-05-04  Tobias Hein  <tobias.hein@netresearch.de>
 
 	* Version: 1.2.0
