--- a/src/Netresearch/TimeTrackerBundle/Resources/translations/messages.de.yml
+++ b/src/Netresearch/TimeTrackerBundle/Resources/translations/messages.de.yml
@@ -43,3 +43,4 @@
 "Please enter a valid user.": "Bitte geben Sie einen gültigen Benutzer an"
 "Please enter a valid contract start.": "Bitte geben Sie einen gültigen Vertragsbeginn an"
 "End date has to be greater than the start date.": "Das Vertragsende muss nach dem Vertragsbeginn liegen."
+"No contract for user found. Please use custome time." : "Für den Benutzer wurde kein Vertrag gefunden. Bitte verwenden Sie eine benutzerdefinierte Zeit."
