TIM-102: Add . to contract error messages

--- a/src/Netresearch/TimeTrackerBundle/Resources/translations/messages.de.yml
+++ b/src/Netresearch/TimeTrackerBundle/Resources/translations/messages.de.yml
@@ -40,8 +40,8 @@
 "Please provide a valid user as team leader.": "Bitte gib einen gültigen Benutzer als Teamleiter an!"
 "Dataset could not be removed. %s": "Der Datensatz konnte nicht enfernt werden! %s"
 "Other datasets refer to this one.": "Der Datensatz ist bereits mit anderen verknüpft."
-"Please enter a valid user.": "Bitte geben Sie einen gültigen Benutzer an"
-"Please enter a valid contract start.": "Bitte geben Sie einen gültigen Vertragsbeginn an"
+"Please enter a valid user.": "Bitte geben Sie einen gültigen Benutzer an."
+"Please enter a valid contract start.": "Bitte geben Sie einen gültigen Vertragsbeginn an."
 "End date has to be greater than the start date.": "Das Vertragsende muss nach dem Vertragsbeginn liegen."
 "No contract for user found. Please use custome time." : "Für den Benutzer wurde kein Vertrag gefunden. Bitte verwenden Sie eine benutzerdefinierte Zeit."
 "Contract expired at %date%." : "Vertrag ist am %date%. abgelaufen."
