fix: correct Jira branding (JIRA → Jira)
Fix product name to use official Atlassian branding "Jira" instead of
legacy "JIRA" in:
- README.md and documentation
- User-facing error messages and translations
- Display labels and exception messages

Note: Enum value `case JIRA = 'JIRA'` preserved for database compatibility.

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -1,7 +1,7 @@
 "Duration must be greater than 0!": "Die Aktivität muss mindestens eine Minute angedauert haben!"
 "You need to login.": "Bitte anmelden."
 "No equivalent timetracker user could be found.": "Es konnte kein entsprechender Timetracker Benutzer gefunden werden."
-"The ticket's prefix '%ticket_jira_id%' does not match the project's JIRA prefix '%project_jira_id%'.": "Das Präfix des Tickets '%ticket_jira_id%' passt nicht zum JIRA-Präfix '%project_jira_id%' des Projektes."
+"The ticket's prefix '%ticket_jira_id%' does not match the project's Jira prefix '%project_jira_id%'.": "Das Präfix des Tickets '%ticket_jira_id%' passt nicht zum Jira-Präfix '%project_jira_id%' des Projektes."
 "Escalation! You spent more time (%spent% h) than expected (%expected% h) on ticket %ticket%!": "Eskalation! Du hast mehr Zeit für das Ticket investiert (nämlich %spent% Stunden) als erwartet (%expected% Stunden)!"
 "You need to specify at least customer, project, user or month and year.": "Du musst mindestens Kunde, Projekt, Mitarbeiter oder Jahr und Monat auswählen."
 "The ticket's format is not recognized.": "Das Ticket-Format konnte nicht erkannt werden."
@@ -18,7 +18,7 @@
 "Every customer must belong to at least one team if it is not global.": "Jeder Kunde muss mindestens einem Team zugeordnet sein (wenn er nicht global ist)!"
 "The customer name provided already exists.": "Der gewählte Kundenname existiert bereits!"
 "Please provide a valid customer name with at least 3 letters.": "Bitte gib einen Kundennamen (mindestens 3 Zeichen) ein."
-"Please provide a valid ticket prefix with only capital letters.": "Das eingegebene JIRA-Präfix ist unzulässig (nur Großbuchstaben)."
+"Please provide a valid ticket prefix with only capital letters.": "Das eingegebene Jira-Präfix ist unzulässig (nur Großbuchstaben)."
 "The project name provided already exists.": "Der gewählte Projektname existiert bereits."
 "Please provide a valid project name with at least 3 letters.": "Bitte gib einen Projektnamen (mindestens 3 Zeichen) ein."
 "Please choose a customer.": "Bitte wähle einen Kunden aus."
@@ -26,7 +26,7 @@
 "Please choose a customer, a project and an activity.": "Bitte wähle einen Kunden, ein Projekt und eine Tätigkeit aus."
 "Please provide a valid ticket system name with at least 3 letters.": "Gib einen Ticket-System Namen (mindestens 3 Zeichen) ein."
 "Please provide a valid preset name with at least 3 letters.": "Bitte gib einen Namen (mindestens 3 Zeichen) ein!"
-"JIRA login failed!": "JIRA-Login ist fehlgeschlagen!"
+"Jira login failed!": "Jira-Login ist fehlgeschlagen!"
 "You need to specify at least customer, project, ticket, user or month and year.": "Bitte gib mindestens Kunde, Projekt, Ticket, Benutzer oder Monat und Jahr an."
 "This project is inactive and cannot be used for booking.": "Dieses Projekt ist inaktiv und darf nicht bebucht werden."
 "This customer is inactive and cannot be used for booking.": "Dieser Kunde ist inaktiv und darf nicht bebucht werden."
